:baby_bottle: add indexlist

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -250,7 +250,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 图标</a>
+      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 滑块</a>
     </li>
   
     
@@ -406,7 +406,35 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link new">Flexbox 弹性布局</a>
+      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link">Flexbox 弹性布局</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/indexlist.html" class="sidebar-link">Indexlist 分类列表</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/pullrefresh.html" class="sidebar-link">Pullrefresh 刷新加载</a>
     </li>
   
     
@@ -639,6 +667,30 @@
 <td style="text-align:center">数字滚动</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/countup.html">https://feui.gitee.io/docs/feui/guide/component/countup.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/countup">https://feui.gitee.io/#/countup</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">455</td>
+<td style="text-align:center">Flexbox</td>
+<td style="text-align:center">弹性布局</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/flexbox.html">https://feui.gitee.io/docs/feui/guide/component/flexbox.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/flexbox">https://feui.gitee.io/#/flexbox</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">456</td>
+<td style="text-align:center">Indexlist</td>
+<td style="text-align:center">分类列表</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/indexlist.html">https://feui.gitee.io/docs/feui/guide/component/indexlist.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/indexlist">https://feui.gitee.io/#/indexlist</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">466</td>
+<td style="text-align:center">Pullrefresh</td>
+<td style="text-align:center">刷新加载</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html">https://feui.gitee.io/docs/feui/guide/component/pullrefresh.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/pullrefresh">https://feui.gitee.io/#/pullrefresh</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
