--- a/docs/feui/guide/component/flexbox.html
+++ b/docs/feui/guide/component/flexbox.html
@@ -250,7 +250,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 图标</a>
+      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 滑块</a>
     </li>
   
     
@@ -406,7 +406,35 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link current new">Flexbox 弹性布局</a>
+      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link current">Flexbox 弹性布局</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/indexlist.html" class="sidebar-link">Indexlist 分类列表</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/pullrefresh.html" class="sidebar-link">Pullrefresh 刷新加载</a>
     </li>
   
     
@@ -604,6 +632,8 @@
         
           <span>← <a href="/docs/feui/guide/component/countup.html">Countup 数字滚动</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/indexlist.html">Indexlist 分类列表</a> →</span>
         
       </div>
     
