--- a/docs/feui/guide/component/range.html
+++ b/docs/feui/guide/component/range.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Range 图标 — Feui</title>
+    <title>Range 滑块 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -250,7 +250,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/range.html" class="sidebar-link current">Range 图标</a>
+      <a href="/docs/feui/guide/component/range.html" class="sidebar-link current">Range 滑块</a>
     </li>
   
     
@@ -406,7 +406,35 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link new">Flexbox 弹性布局</a>
+      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link">Flexbox 弹性布局</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/indexlist.html" class="sidebar-link">Indexlist 分类列表</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/pullrefresh.html" class="sidebar-link">Pullrefresh 刷新加载</a>
     </li>
   
     
@@ -466,7 +494,7 @@
 <div  id='content' class="content guide with-sidebar range-guide">
   <div class='content_box'>
     
-      <h1>Range 图标</h1>
+      <h1>Range 滑块</h1>
     
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/range">Live Demo&gt;&gt;</a></p>
