--- a/docs/feui/guide/component/rater.html
+++ b/docs/feui/guide/component/rater.html
@@ -250,7 +250,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 图标</a>
+      <a href="/docs/feui/guide/component/range.html" class="sidebar-link">Range 滑块</a>
     </li>
   
     
@@ -406,7 +406,35 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link new">Flexbox 弹性布局</a>
+      <a href="/docs/feui/guide/component/flexbox.html" class="sidebar-link">Flexbox 弹性布局</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/indexlist.html" class="sidebar-link">Indexlist 分类列表</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/pullrefresh.html" class="sidebar-link">Pullrefresh 刷新加载</a>
     </li>
   
     
@@ -554,7 +582,7 @@
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/component/range.html">Range 图标</a></span>
+          <span>← <a href="/docs/feui/guide/component/range.html">Range 滑块</a></span>
         
         
           <span style="float: right;"><a href="/docs/feui/guide/component/search.html">Search 搜索框</a> →</span>
