:baby_bottle: edit md

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -708,6 +708,14 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
+<td style="text-align:center">466</td>
+<td style="text-align:center">InlineCalendar</td>
+<td style="text-align:center">日历组件</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html">https://feui.gitee.io/docs/feui/guide/component/inlinecalendar.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/inlinecalendar">https://feui.gitee.io/#/inlinecalendar</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
